# cognitive-workspace-db

./: .env.example  .gitignore  README.md  example_mcp_config.json  pyproject.toml  test_workspace.py
.github/: copilot-instructions.md
docs/: Gen3_agent.md  IMPLEMENTATION.md  SETUP.md  rough_concept.md
prompts/: quick_reference.md  tool_usage_guide.md
src/: __init__.py  server.py
