[project]
name = "cognitive-workspace-db"
version = "0.1.0"
description = "Cognitive Workspace Database - Active reasoning in latent space using Neo4j and Chroma"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.2",
    "neo4j>=5.27.0",
    "chromadb>=0.5.23",
    "numpy>=2.2.1",
    "torch>=2.0.0",
    "sentence-transformers>=3.3.1",
    "accelerate>=1.2.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.6.1",
    "ollama>=0.4.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.8.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
